--- a/eureka_server/src/main/resources/application-dev.yml
+++ b/eureka_server/src/main/resources/application-dev.yml
@@ -2,9 +2,9 @@ server:
   port: 1110
 eureka:
   instance:
-    hostname: localhost1
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost1:1110/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
