--- a/config_server/src/main/resources/bootstrap.yml
+++ b/config_server/src/main/resources/bootstrap.yml
@@ -9,8 +9,18 @@ spring:
       server:
         git:
           uri: https://github.com/2014021008/profile.git
-          search-paths: profile
+          search-paths:
+          default-label: master
 eureka:
   client:
     service-url:
       defaultZone:  http://localhost:1110/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
