--- a/eureka_server/src/main/resources/application-dev.yml
+++ b/eureka_server/src/main/resources/application-dev.yml
@@ -8,3 +8,13 @@ eureka:
     fetch-registry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
