--- a/springcloud_provider/src/main/resources/application-dev.yml
+++ b/springcloud_provider/src/main/resources/application-dev.yml
@@ -1,7 +1,18 @@
 server:
-  port: 8080
+  port: 8081
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:1110/eureka/
+  instance:
+    prefer-ip-address: true
+
+
+info:
+  app:
+    name: provider8081
+  company:  www.xxx.com
+  build:
+    artifactId: ${project.artifactId}$
+    version:  ${project.version}$
