--- a/config_server/src/main/resources/bootstrap.yml
+++ b/config_server/src/main/resources/bootstrap.yml
@@ -14,3 +14,10 @@ eureka:
   client:
     service-url:
       defaultZone:  http://localhost:1110/eureka
+  instance:
+    prefer-ip-address: true
+
+info:
+  app:
+    name: configServer
+  company: www.xxx.com
