--- a/eureka_server2/src/main/resources/application-dev.yml
+++ b/eureka_server2/src/main/resources/application-dev.yml
@@ -4,8 +4,11 @@ eureka:
   instance:
     hostname: localhost2
     prefer-ip-address: true
+    instance-id: localhost2_7071
   client:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost1:7070/eureka,http://localhost3:7072/eureka
+  server:
+    enable-self-preservation: true #自我保护机制开启
