--- a/eureka_server3/src/main/resources/application-dev.yml
+++ b/eureka_server3/src/main/resources/application-dev.yml
@@ -4,8 +4,11 @@ eureka:
   instance:
     hostname: localhost3
     prefer-ip-address: true
+    instance-id: localhost3_7072
   client:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost2:7071/eureka,http://localhost1:7070/eureka
+  server:
+    enable-self-preservation: true #自我保护机制开启
